add about, lots of theme changes

--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -4,6 +4,6 @@
   url        = "/about"
 
 [[main]]
-  identifier = "posts"
-  name       = "Posts"
-  url        = "/posts"
+  identifier = "emulation"
+  name       = "Emulation"
+  url        = "/emulation"
