--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,4 +3,5 @@ title        = "eggception"
 theme        = "hello-friend"
 copyright    = "Julian Smolka"
 languageCode = "en-us"
+disableKinds = ["RSS"]
 paginate     = 5
