changes to about and first progress report

--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -6,4 +6,4 @@ url        = "/about"
 [[main]]
 identifier = "emulation"
 name       = "Emulation"
-url        = "/emulation"
+url        = "/tags/emulation"
