use submodule and overwrites for theme

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,6 +1,6 @@
 baseURL      = "/"
 title        = "eggception"
-theme        = "hello-friend"
+theme        = "hello-friend-ng"
 copyright    = "Julian Smolka"
 languageCode = "en-us"
 disableKinds = ["RSS"]
