--- a/config/config.toml
+++ b/config/config.toml
@@ -1,42 +1,43 @@
-baseURL      = "/"
-title        = "eggception"
-theme        = "hello-friend-ng"
-copyright    = "Julian Smolka"
-languageCode = "en-us"
-
-disableKinds    = ["RSS"]
-customCSS       = []
-customJS        = []
+baseURL         = "/"
+title           = "eggception"
+theme           = "hello-friend-ng"
+copyright       = "Julian Smolka"
+languageCode    = "en-us"
+disableRSS      = true
+paginate        = 5
 googleAnalytics = "UA-153991522-1"
 
 [params]
+  # Metadata
   description  = "Homepage by Julian Smolka"
   keywords     = "computer science, programming, emulation"
-  homeSubtitle = ""
+  homeSubtitle = "Computer Science Entity"
 
+  # Content
   contentTypeName = "posts"
   defaultTheme    = "dark"
 
-  dateform        = "Jan 2, 2006"
-  dateformShort   = "Jan 2"
-  dateformNum     = "2006-01-02"
-  dateformNumTime = "2006-01-02 15:04 -0700"
+  # Datetime formats
+  dateFormatSingle = "2006-01-02"
+  dateFormatList   = "2006-01-02"
+  dateformNumTime  = "2006-01-02"
 
-  [params.logo]
+  [logo]
   logoText     = "eggception"
   logoHomeLink = "/"
 
-  [[params.social]]
+  [[social]]
   name = "github"
   url  = "https://github.com/jsmolka"
 
 [menu]
-  [[menu.main]]
+
+  [[main]]
   identifier = "about"
   name       = "About"
   url        = "/about"
 
-  [[menu.main]]
+[[main]]
   identifier = "eggvance"
   name       = "eggvance"
   url        = "/eggvance"
