update icon, use image for icon

--- a/config.toml
+++ b/config.toml
@@ -46,3 +46,7 @@ disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
   [[module.mounts]]
     source = "icon/web"
     target = "static"
+
+  [[module.mounts]]
+    source = "icon/bin/icon-optimized.svg"
+    target = "static/icon.svg"
