--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postcss": "^7.0.27",
     "postcss-cli": "^7.1.0",
     "postcss-import": "^12.0.1",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "^1.2.0",
+    "tailwindcss-dark-mode": "^1.1.4"
   }
 }
