--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,7 @@ disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
 [params]
   description     = "The homepage of Julian Smolka"
   github          = "jsmolka"
+  birthDate       = "1998-05-11"
   dateform        = "Jan 2, 2006"
   dateformShort   = "Jan 2"
   dateformNum     = "2006-01-02"
