--- a/config.toml
+++ b/config.toml
@@ -17,19 +17,16 @@ disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
 
 [menu]
   [[menu.main]]
-    identifier = "about"
-    name       = "About"
-    url        = "/about"
+    name = "About"
+    url  = "/about"
 
   [[menu.main]]
-    identifier = "blog"
-    name       = "Blog"
-    url        = "/blog"
+    name = "Posts"
+    url  = "/posts"
 
   [[menu.main]]
-    identifier = "eggvance"
-    name       = "eggvance"
-    url        = "/eggvance"
+    name = "eggvance"
+    url  = "/eggvance"
 
 [markup]
   [markup.goldmark]
