--- a/config.toml
+++ b/config.toml
@@ -7,9 +7,8 @@ disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
   name = "Julian Smolka"
 
 [params]
-  description     = "The homepage of Julian Smolka"
-  github          = "jsmolka"
-  contentDir      = "https://github.com/jsmolka/jsmolka.github.io/tree/source/content"
+  description     = "Just another dark corner in the internet."
+  contentUrl      = "https://github.com/jsmolka/jsmolka.github.io/tree/source/content"
   birthDate       = "1998-05-11"
   dateform        = "Jan 2, 2006"
   dateformShort   = "Jan 2"
