--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "postcss": "^7.0.32",
     "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
-    "tailwindcss": "^1.4.6",
-    "tailwindcss-dark-mode": "^1.1.4"
+    "tailwindcss": "^1.4.6"
   }
 }
