--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL      = "/"
-title        = "Another dark corner"
+title        = "Smolka"
 copyright    = "Julian Smolka"
 disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
 
@@ -7,7 +7,7 @@ disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
   name = "Julian Smolka"
 
 [params]
-  description     = "Another dark corner of the internet."
+  description     = "Mediocre posts about emulation and micro-optimizations."
   contentUrl      = "https://github.com/jsmolka/jsmolka.github.io/tree/source/content"
   birthDate       = "1998-05-11"
   dateform        = "Jan 2, 2006"
