--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
   name = "Julian Smolka"
 
 [params]
-  description     = "Mediocre posts about emulation and micro-optimizations."
+  description     = "Mediocre posts about emulation and micro optimizations."
   contentUrl      = "https://github.com/jsmolka/jsmolka.github.io/tree/source/content"
   birthDate       = "1998-05-11"
   dateform        = "Jan 2, 2006"
