--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL      = "/"
+baseURL      = "https://smolka.dev/"
 title        = "Smolka"
 copyright    = "Julian Smolka"
 disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
