--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "autoprefixer": "^9.8.6",
+    "chart.js": "^2.9.4",
     "glob": "^7.1.6",
     "hamburgers": "^1.1.3",
     "jsdom": "^16.4.0",
+    "moment": "^2.29.1",
     "postcss": "^8.0.5",
     "postcss-cli": "^7.1.2",
     "postcss-import": "^12.0.1",
