--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "author": "Julian Smolka",
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
+    "alpinejs": "^2.7.3",
     "autoprefixer": "^9.8.6",
     "chart.js": "^2.9.4",
     "glob": "^7.1.6",
     "hamburgers": "^1.1.3",
+    "headroom.js": "^0.12.0",
     "jsdom": "^16.4.0",
     "moment": "^2.29.1",
     "postcss": "^8.0.5",
