move static data into own folder

--- a/config.toml
+++ b/config.toml
@@ -41,8 +41,32 @@ disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
 
 [module]
   [[module.mounts]]
-    source = "static"
-    target = "static"
+    source = "static/CNAME"
+    target = "static/CNAME"
+
+  [[module.mounts]]
+    source = "static/audio"
+    target = "static/static/audio"
+
+  [[module.mounts]]
+    source = "static/data"
+    target = "static/static/data"
+
+  [[module.mounts]]
+    source = "static/font"
+    target = "static/static/font"
+
+  [[module.mounts]]
+    source = "static/icon"
+    target = "static/static/icon"
+
+  [[module.mounts]]
+    source = "static/img"
+    target = "static/static/img"
+
+  [[module.mounts]]
+    source = "static/wasm"
+    target = "static/static/wasm"
 
   [[module.mounts]]
     source = "icon/website/web"
