--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "chart.js": "^2.9.4",
     "glob": "^7.1.6",
     "hamburgers": "^1.1.3",
+    "har-schema": "^2.0.0",
     "headroom.js": "^0.12.0",
     "jsdom": "^16.4.0",
     "moment": "^2.29.1",
